WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225875
MediaSession action handlers aren't treated as having a user gesture
https://bugs.webkit.org/show_bug.cgi?id=225875
Summary
MediaSession action handlers aren't treated as having a user gesture
Jer Noble
Reported
2021-05-17 09:17:56 PDT
MediaSession action handlers aren't treated as having a user gesture
Attachments
Patch
(5.36 KB, patch)
2021-05-17 09:19 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(4.60 KB, patch)
2021-05-17 09:30 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-05-17 09:19:40 PDT
Created
attachment 428838
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2021-05-17 09:19:42 PDT
<
rdar://problem/78107727
>
Peng Liu
Comment 3
2021-05-17 09:24:19 PDT
Comment on
attachment 428838
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=428838&action=review
> Source/WebCore/ChangeLog:16 > +2021-05-17 Jer Noble <
jer.noble@apple.com
>
Duplicated change logs?
> LayoutTests/ChangeLog:11 > +2021-05-17 Jer Noble <
jer.noble@apple.com
>
Ditto. :-)
Jer Noble
Comment 4
2021-05-17 09:30:23 PDT
Created
attachment 428839
[details]
Patch
EWS
Comment 5
2021-05-17 11:12:46 PDT
Committed
r277588
(
237813@main
): <
https://commits.webkit.org/237813@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428839
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug