MediaSession action handlers aren't treated as having a user gesture https://bugs.webkit.org/show_bug.cgi?id=225875

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/media-session/user-gesture-action-handlers.html

We treat remote control commands as having a user gesture, but not when firing
a MediaSession action handler; we should treat them the same.

* Modules/mediasession/MediaSession.cpp:
(WebCore::MediaSession::callActionHandler):

LayoutTests:

* media/media-session/user-gesture-action-handlers-expected.txt: Added.
* media/media-session/user-gesture-action-handlers.html: Added.


Canonical link: https://commits.webkit.org/237813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277588 268f45cc-cd09-0410-ab3c-d52691b4dbfc